move math doc to normal resources

--- a/1_python_basics.ipynb
+++ b/1_python_basics.ipynb
@@ -12,6 +12,7 @@
     "\n",
     "This is only a very brief introduction, mostly intended for people who already know a bit about computer science. If you feel this does not provide enough information for you, please consider looking at these additional references:\n",
     "- [Official Python Tutorial](https://docs.python.org/3/tutorial/)\n",
+    "- [W3 School Tutorials](https://www.w3schools.com/python/default.asp)\n",
     "- [Video Tutorials on YouTube](https://www.youtube.com/playlist?list=PL-osiE80TeTt2d9bfVyTiXJA-UTHn6WwU)\n",
     "- [Beginners Computer Science & Python Course on Udacity](https://eu.udacity.com/course/intro-to-computer-science--cs101)\n",
     "\n",
