--- a/1_python_basics.ipynb
+++ b/1_python_basics.ipynb
@@ -1493,6 +1493,17 @@
     "\n",
     "List (and dictionary) comprehensions are a really neat way to quickly generate a list or dictionary in a single line. It's also more efficient than appending elements to a list or dictionary in a loop (due to the way memory is allocated). It might look a bit complicated at first, but once you get it you'll use it all the time!\n",
     "\n",
+    "The key to understanding list comprehensions is to think about what they would look like as ordinary for loops. They always have the structure:\n",
+    "```\n",
+    "[(expression) (for loops and if statements)]\n",
+    "```\n",
+    "Which is the same as\n",
+    "```\n",
+    "for loops and if statements:\n",
+    "    expression\n",
+    "```\n",
+    "i.e., the for loops and if statements are always in the same order, only that normally they are spread out over multiple lines with indentation, while in a list comprehension they are in a single line one after another and without a `:` between them. The expression that is normally inside one or multiple loops is at the beginning of the list comprehension.\n",
+    "\n",
     "Check out the [documentation](https://docs.python.org/3/tutorial/datastructures.html#list-comprehensions) for more complex examples."
    ]
   },
@@ -1520,14 +1531,14 @@
    "outputs": [],
    "source": [
     "# you can also include if statements to filter the elements\n",
-    "a_list1 = [i+1 for i in range(10) if i % 2]\n",
+    "a_list1 = [i**2 for i in range(10) if i % 2]\n",
     "print(a_list1)\n",
     "\n",
     "# the same in a for loop\n",
     "a_list2 = []\n",
     "for i in range(10):\n",
     "    if i % 2:\n",
-    "        a_list2.append(i+1)\n",
+    "        a_list2.append(i**2)\n",
     "print(a_list2)"
    ]
   },
@@ -1539,6 +1550,31 @@
    "source": [
     "# or use multiple for loops\n",
     "[(x, y) for x in [1, 2, 3] for y in [1, 2, 3] if x != y]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list_of_lists = [range(5), range(14), range(7), range(22)]\n",
+    "\n",
+    "# a more complicated example that combines multiple for loops and if statements\n",
+    "a_list1 = [x for inside_list in list_of_lists if len(inside_list) > 5 for x in inside_list if x > 10]\n",
+    "print(a_list1)\n",
+    "\n",
+    "a_list2 = []\n",
+    "# go through the list of lists\n",
+    "for inside_list in list_of_lists:\n",
+    "    # continue only if the inside list has more than 5 elements\n",
+    "    if len(inside_list) > 5:\n",
+    "        # go through the elements of the inside list\n",
+    "        for x in inside_list:\n",
+    "            # continue only if the element is larger than 10\n",
+    "            if x > 10:\n",
+    "                a_list2.append(x)\n",
+    "print(a_list2)"
    ]
   },
   {
@@ -1865,7 +1901,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1879,7 +1915,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
