more examples for flattened arrays etc

--- a/4_numpy_pandas.ipynb
+++ b/4_numpy_pandas.ipynb
@@ -37,12 +37,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Vectors**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create a vector with 3 dimensions from a list\n",
+    "# create a vector with 3 values from a list\n",
     "a = np.array([1., -2., 0.])\n",
     "# look at the vector\n",
     "a"
@@ -54,9 +61,125 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# check the shape of the vector -> just one dimension (-> \"flat\")\n",
+    "a.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create a row vector\n",
+    "b = np.array([[1., -2., 0.]])\n",
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# notice the difference in dimensions compared to a\n",
+    "b.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create a column vector\n",
+    "c = np.array([[1.], [-2.], [0.]])\n",
+    "c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# compare dimensions again\n",
+    "c.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Matrices**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# create a 2x3 matrix from nested lists\n",
     "M = np.array([[1., 2., 3.], [4., 5., 6.]])\n",
     "M"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check the shape of the matrix -> rows x cols\n",
+    "M.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# transpose the matrix (i.e., mirror elements at diagonal)\n",
+    "M.T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check the shape of the transposed matrix\n",
+    "M.T.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# flatten the matrix, i.e., get all values in one vector\n",
+    "M.flatten()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check the dimensions of the flattened matrix\n",
+    "M.flatten().shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Mathematical Operations**"
    ]
   },
   {
@@ -147,17 +270,8 @@
    "outputs": [],
    "source": [
     "# make sure the inner dimensions always line up, otherwise you'll get an error like this\n",
+    "# (-> check the shape of the matrices to investigate such errors)\n",
     "np.dot(M, M)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# check the shape of a matrix or vector (e.g. to investigate errors like the one above)\n",
-    "M.shape"
    ]
   },
   {
@@ -245,7 +359,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# column 3 but as a flattened array (shape: (4,))\n",
+    "# column 3, but as a flat array (shape: (4,))\n",
     "R[:, 2]"
    ]
   },
