--- a/3_exercise_solutions.ipynb
+++ b/3_exercise_solutions.ipynb
@@ -191,7 +191,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.04 ms ± 11.6 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "597 µs ± 883 ns per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
      ]
     }
    ],
@@ -211,7 +211,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "105 µs ± 5.39 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+      "93.8 µs ± 617 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
      ]
     }
    ],
@@ -230,7 +230,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "89 µs ± 3.05 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+      "90 µs ± 598 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
      ]
     }
    ],
@@ -308,7 +308,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -322,7 +322,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
