--- a/1_python_basics.ipynb
+++ b/1_python_basics.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Python Basics\n",
     "\n",
-    "This is an interactive Jupyter Notebook explaining the very basics of Python that you'll need for the Machine Learning course.\n",
+    "This is an interactive Jupyter Notebook explaining the very basics of Python that you'll need for my Machine Learning course.\n",
     "\n",
     "Please make sure you understand everything mentioned here and are able to solve the exercises in the next notebook!\n",
     "\n",
@@ -14,9 +14,8 @@
     "- [Official Python Tutorial](https://docs.python.org/3/tutorial/)\n",
     "- [W3 School Tutorials](https://www.w3schools.com/python/default.asp)\n",
     "- [Video Tutorials on YouTube](https://www.youtube.com/playlist?list=PL-osiE80TeTt2d9bfVyTiXJA-UTHn6WwU)\n",
-    "- [Beginners Computer Science & Python Course on Udacity](https://eu.udacity.com/course/intro-to-computer-science--cs101)\n",
     "\n",
-    "For bonus points, also have a look at the official [**Python Code Style Guide**](https://www.python.org/dev/peps/pep-0008/). \n",
+    "For bonus points, also have a look at the official [Python Code Style Guide](https://www.python.org/dev/peps/pep-0008/). \n",
     "\n",
     "You can execute the code in the cells by clicking into a cell and pressing \"shift\"+\"enter\" or clicking the \"run\" button at the top. Feel free to experiment a bit by changing the code in the examples to see what happens. Don't worry if you get any error messages - consider them hints on how to do better ;-)\n",
     "\n",
@@ -110,7 +109,7 @@
    "source": [
     "### Variables\n",
     "\n",
-    "You already know variables from math. There, a placeholder like $x$ can stand for any kind of value. In programming this is similar, you just define a name and assign it a value and then you can work with these values in a more convienient way by adressing the variables that store them. This is especially useful if you want to change a value somewhere: since it's assigned to the variable, everywhere where you use the variable it uses the new value, you don't have to copy & paste it a hundred times :)"
+    "You already know variables from math. There, a placeholder like $x$ can stand for any kind of value. In programming this is similar, you just define a name and assign it a value and then you can work with these values in a more convienient way by referencing the variables that store them. This is especially useful if you want to change a value somewhere: since it's assigned to the variable, everywhere where you use the variable it uses the new value, you don't have to copy & paste it a hundred times :)"
    ]
   },
   {
@@ -202,9 +201,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Datatypes\n",
+    "### Data Types\n",
     "\n",
-    "Your variables can store different kinds of data, e.g., numbers, text, or even more complex objects. Some basic datatypes are:\n",
+    "Your variables can store different kinds of data, e.g., numbers, text, or even more complex objects. Some basic data types are:\n",
     "- `int`: Integers are whole numbers, i.e., without a decimal point\n",
     "- `float`: Floating point numbers include the places after the decimal point\n",
     "- `str`: \"String\" is just a fancy word for text\n",
@@ -549,11 +548,11 @@
    "metadata": {},
    "source": [
     "### Collections\n",
-    "More complex datatypes allow us to store multiple values at a time. These include:\n",
-    "- `tuple`: A tuple contains multiple elements separated by `,`. Usually, these elements are grouped by `()`. A tuple is an immutable datatype, i.e., once it's been defined, the values in a tuple can't be changed anymore.\n",
+    "More complex data types allow us to store multiple values at a time. These include:\n",
+    "- `tuple`: A tuple contains multiple elements separated by `,`. Usually, these elements are grouped by `()`. A tuple is an immutable data type, i.e., once it's been defined, the values in a tuple can't be changed anymore.\n",
     "- `list`: A list is very similar to a tuple but with `[]` surrounding the items and the elements in a list can be changed after its creation.\n",
     "- `set`: In a set, every item occurs only once and the elements are not in a specific order.\n",
-    "- `dict`: A dictionary (similar to a hash table in other programming languages) contains a mapping between keys and values. While the values can be arbitrarily complex datatypes, the keys have to be something \"hashable\", like an int, string, or tuple.\n",
+    "- `dict`: A dictionary (similar to a hash table in other programming languages) contains a mapping between keys and values. While the values can be arbitrarily complex data types, the keys have to be something \"hashable\", like an int, string, or tuple.\n",
     "\n",
     "Check the [official documentation](https://docs.python.org/3/tutorial/datastructures.html) for more details, e.g., functions you can call on lists etc."
    ]
@@ -744,7 +743,8 @@
    "source": [
     "# check if an element is in a list with the keyword \"in\"\n",
     "print(14 in a_list) # bool\n",
-    "# if the element is in the list, you can also ask for its index (the first occurence if it's in there multiple times)\n",
+    "# if the element is in the list, you can also ask for its index\n",
+    "# (the first occurence if it's in there multiple times)\n",
     "print(a_list.index(14)) # int: --> a_list[a_list.index(14)] gives you 14!"
    ]
   },
@@ -1040,7 +1040,7 @@
     "#### min, max, and sorting\n",
     "\n",
     "`min()` and `max()` are builtin functions to give you the smallest or largest element from a collection.\n",
-    "`sorted()` returns a sorted list from the given collection. There needs to be a meaningful way to compare the elements in the collection for this to work, i.e., all elements need to be of the same datatype."
+    "`sorted()` returns a sorted list from the given collection. There needs to be a meaningful way to compare the elements in the collection for this to work, i.e., all elements need to be of the same data type."
    ]
   },
   {
@@ -1200,8 +1200,8 @@
     "```python\n",
     "while ZZZ:\n",
     "    # you land and stay inside here if ZZZ evaluates to True.\n",
-    "    # make sure that some point in the code you change something so that ZZZ\n",
-    "    # will eventually evaluate to False so you can exit the loop again and finish.\n",
+    "    # make sure that at some point in the code you change something so that ZZZ\n",
+    "    # eventually evaluates to False so you can exit the loop again and finish.\n",
     "```\n",
     "\n",
     "Conditional statements always need an `if` part (first check), then they can contain multiple `elif` (\"else if\") statements with other checks (if the first check has failed), and finally they can have an `else` statement, which catches all other cases. The `elif` and `else` statements are optional, but `else` always has to come last.\n",
@@ -1424,7 +1424,7 @@
     "while len(a_list) < 10:\n",
     "    # \"i % 2\" returns the remainder if you divide the variable i by 2.\n",
     "    # since the number 0 also evalues to False we enter the if block\n",
-    "    # if i is a number that is divisible without rest by 2\n",
+    "    # if i is a number that is divisible without remainder by 2\n",
     "    if not (i % 2):\n",
     "        a_list.append(i)\n",
     "    i += 1\n",
@@ -1823,7 +1823,7 @@
    "source": [
     "### Accessing code defined outside this notebook\n",
     "\n",
-    "The great thing about Python is that a lot of other people have written a lot of very useful code that you can use for your own projects. However, by default, your code only knows the variables and functions that you have defined here yourself (together with some very basic standard functions like `len()` and `max()`). To get access to all the other great code, you need to **import** it, so your code knows how to call on it.\n",
+    "The great thing about Python is that a lot of other people have written a lot of very useful code that you can use for your own projects. However, by default, your code only knows the variables and functions that you have defined here yourself (together with some very basic standard functions like `len()` and `max()`). To get access to all the other great code, you need to **import** it, so your code knows how to reference it.\n",
     "\n",
     "These are the standard ways to import code:\n",
     "```python\n",
@@ -1845,8 +1845,8 @@
     "# sometimes the functions that you need are in a submodule of the library\n",
     "# this is accessed with a \".\". Also, multiple things that you want to import\n",
     "# from a (sub)module can be separated by commas:\n",
-    "from some_library.submodule_name import another_function, Some_Class\n",
-    "# you can now call \"another_function()\" and \"Some_Class()\" directly\n",
+    "from some_library.submodule_name import another_function, SomeClass\n",
+    "# you can now call \"another_function()\" and \"SomeClass()\" directly\n",
     "\n",
     "# Never do this:\n",
     "from some_library import *\n",
@@ -1915,7 +1915,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
