--- a/4_numpy_pandas.ipynb
+++ b/4_numpy_pandas.ipynb
@@ -21,9 +21,9 @@
     "\n",
     "The most important data structure in numpy is the so called `array`, which is used to represent a vector or matrix.\n",
     "\n",
-    "**Official `numpy` tutorial:** https://numpy.org/devdocs/user/quickstart.html\n",
+    "**Official `numpy` tutorial:** https://numpy.org/doc/stable/user/quickstart.html\n",
     "\n",
-    "(If you're interested in more advanced scientific programming (e.g. optimization), you may also want to check out the official [scipy tutorial](https://docs.scipy.org/doc/scipy/reference/tutorial/index.html) for more information on the `scipy` library.)"
+    "(If you're interested in more advanced scientific programming (e.g. optimization), you may also want to check out the official [scipy documentation](https://docs.scipy.org/doc/scipy/index.html) for more information on the `scipy` library.)"
    ]
   },
   {
@@ -189,7 +189,7 @@
    "outputs": [],
    "source": [
     "# multiply all elements in the matrix by 3\n",
-    "3*M"
+    "3 * M"
    ]
   },
   {
@@ -209,7 +209,7 @@
    "outputs": [],
    "source": [
     "# elementwise multiplication of all entries in the matrices\n",
-    "M*M"
+    "M * M"
    ]
   },
   {
@@ -219,7 +219,7 @@
    "outputs": [],
    "source": [
     "# elementwise addition of all entries in the matrices\n",
-    "M+M"
+    "M + M"
    ]
   },
   {
@@ -280,7 +280,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create a 3 dimensional identity matrix\n",
+    "# create a 3-dimensional identity matrix\n",
     "np.eye(3)"
    ]
   },
@@ -681,7 +681,7 @@
    "source": [
     "#### Import & Export\n",
     "\n",
-    "Have a look at the [pandas tutorial](https://pandas.pydata.org/pandas-docs/stable/user_guide/io.html) for more info on possible file formats as well as additional options for saving and loading data."
+    "Have a look at the [pandas documentation](https://pandas.pydata.org/pandas-docs/stable/user_guide/io.html) for more info on possible file formats as well as additional options for saving and loading data."
    ]
   },
   {
@@ -836,7 +836,7 @@
     "    df = pd.read_csv(\"data/test_na.csv\")\n",
     "except FileNotFoundError:\n",
     "    # directly access file from github (for google colab)\n",
-    "    df = pd.read_csv(\"https://raw.githubusercontent.com/cod3licious/python_tutorial/master/data/test_na.csv\")\n",
+    "    df = pd.read_csv(\"https://raw.githubusercontent.com/cod3licious/python_tutorial/main/data/test_na.csv\")\n",
     "# there are some NaNs!\n",
     "df"
    ]
@@ -915,9 +915,8 @@
    "outputs": [],
    "source": [
     "# to avoid errors, it's often a good idea to reset the index\n",
-    "# inplace: change df directly instead of returning a new object\n",
-    "# drop: don't keep old index\n",
-    "df.reset_index(inplace=True, drop=True)\n",
+    "# drop=True: don't keep old index\n",
+    "df = df.reset_index(drop=True)\n",
     "# df.loc[1] would work again now\n",
     "df"
    ]
@@ -988,7 +987,7 @@
     "#### Dealing with time series data\n",
     "Time series data is often stored in specialized databases, which sometimes export the data in a so-called \"long format\", where the variables are no longer stored in individual columns (like in the regular \"wide format\" that we were dealing with so far). To later use this data with our machine learning methods, we therefore first need to transform it into the wide format (data points/observations in rows, variables/features in columns).\n",
     "\n",
-    "The dataset is originally from [here](http://archive.ics.uci.edu/ml/datasets/Occupancy+Detection+) but was modified for our purposes. It contains timestamped data of different sensors (temp, co2, etc.) in a room and how many people are currently present in the room."
+    "The dataset is originally from [here](https://archive.ics.uci.edu/dataset/357/occupancy+detection) but was modified for our purposes. It contains timestamped data of different sensors (temp, co2, etc.) in a room and how many people are currently present in the room."
    ]
   },
   {
@@ -1003,7 +1002,7 @@
     "    df = pd.read_csv(\"data/test_timeseries.csv\")\n",
     "except FileNotFoundError:\n",
     "    # directly access file from github (for google colab)\n",
-    "    df = pd.read_csv(\"https://raw.githubusercontent.com/cod3licious/python_tutorial/master/data/test_timeseries.csv\")\n",
+    "    df = pd.read_csv(\"https://raw.githubusercontent.com/cod3licious/python_tutorial/main/data/test_timeseries.csv\")\n",
     "# variable contains the column name and value the corresponding value at this timestamp\n",
     "df"
    ]
@@ -1061,7 +1060,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# lets plot the time series (this only works so nicely because \n",
+    "# let's plot the time series (this only works so nicely because \n",
     "# the timestamp is the index column and was correctly formatted!)\n",
     "df_wide.plot(subplots=True);  # the \";\" at the end prevents unnecessary additional output"
    ]
@@ -1096,7 +1095,7 @@
     "\n",
     "If you don't have a dataset of your own that you want to explore, maybe you'll find one here that interests you: https://www.kaggle.com/datasets?fileType=csv&sizeEnd=100%2CMB\n",
     "\n",
-    "If you're not working on your own computer, but e.g. online with Binder you can go back to the folder view with the list of notebooks and in the top right there is a button \"Upload\" where you can e.g. upload a .csv file from your computer to work with online.\n",
+    "If you're not working on your own computer, but e.g. online with Binder you can go back to the folder view with the list of notebooks and at the top right there is a button \"Upload\" where you can e.g. upload a .csv file from your computer to work with online.\n",
     "\n",
     "Don't be afraid to google if you don't know how to do something (tip: search in English to get more results!). You can also get the documentation of any function by writing a `?` after its name to see, for example, what parameters you can pass to it."
    ]
@@ -1135,7 +1134,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
