--- a/2_exercises.ipynb
+++ b/2_exercises.ipynb
@@ -70,6 +70,7 @@
     "assert all_the_same([1, 1, 1]) == True, \"all the same\"\n",
     "assert all_the_same([1, 2, 1]) == False, \"some different\"\n",
     "assert all_the_same(['a', 'a', 'a']) == True, \"all the same - letters\"\n",
+    "assert all_the_same([1, 'a', 1]) == False, \"mixed types\"\n",
     "assert all_the_same([]) == True, \"no elements = the same elements\""
    ]
   },
@@ -101,7 +102,7 @@
     "    return False\n",
     "\n",
     "# some basic tests with assert statements\n",
-    "assert strong_password('A1213pokl') == False, \"to short\"\n",
+    "assert strong_password('A1213pokl') == False, \"too short\"\n",
     "assert strong_password('bAse730onE') == True, \"good password\"\n",
     "assert strong_password('asasasasasasasaas') == False, \"only lowercase letters\"\n",
     "assert strong_password('QWERTYqwerty') == False, \"no digits\"\n",
@@ -189,7 +190,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -203,7 +204,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
